--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,4 @@
 <div class="container">
-    <app-calculadora></app-calculadora>
-    <app-calcular-media></app-calcular-media>
-    <app-apolice-seguro></app-apolice-seguro>
+    <app-menu-superior></app-menu-superior>
+    <router-outlet></router-outlet>
 </div>
